--- a/client/index.html
+++ b/client/index.html
@@ -3,15 +3,19 @@
 <head>
 	<script src="angular/angular.js"></script>
 	<script src="angular-route/angular-route.js"></script>
-	<script src="app.js"></script>
-	<script src="factories/friendsFactory.js"></script>
-	<script src="controllers/indexController.js"></script>
-	<script src="controllers/showController.js"></script>
-	<script src="controllers/editController.js"></script>
+	<script src="angular-bootstrap/ui-bootstrap.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/factories/friendsFactory.js"></script>
+	<script src="js/controllers/indexController.js"></script>
+	<script src="js/controllers/showController.js"></script>
+	<script src="js/controllers/editController.js"></script>
+
+	<!-- styles -->
+	<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body ng-view>
-
-
 
 </body>
 </html>
